--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:src="@drawable/dc"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="40dp"
         android:scaleType="centerCrop"
         />
 
@@ -32,7 +32,7 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         android:textSize="16sp"
         android:drawableLeft="@drawable/email"
         android:drawablePadding="20dp"
@@ -44,7 +44,7 @@
         android:layout_width="320dp"
         android:layout_height="40dp"
         android:background="@drawable/squareblue"
-        android:hint="Passsword"
+        android:hint="Password"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
@@ -52,7 +52,7 @@
         android:fontFamily="@font/montserrat"
         android:textSize="16sp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="20dp"
         android:layout_marginBottom="20dp"/>
