--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -58,7 +58,7 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:background="@drawable/squareblue"
-            android:hint="+91"
+            android:hint="91"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
