--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -100,13 +100,14 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animation"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:lottie_rawRes="@raw/rocket"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             android:layout_marginTop="-20dp"
             android:layout_marginBottom="-10dp"
-            android:layout_above="@+id/text1"/>
+            android:layout_above="@+id/text1"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
