--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,9 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:background="@drawable/squareblue"
         android:hint="Email"
@@ -41,7 +43,9 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="40dp"
         android:background="@drawable/squareblue"
         android:hint="Password"
@@ -59,13 +63,15 @@
 
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp">
 
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundgbluebutton"
             android:fontFamily="@font/montserrat"
