--- a/app/src/main/res/layout/activity_login_number.xml
+++ b/app/src/main/res/layout/activity_login_number.xml
@@ -9,10 +9,13 @@
     android:background="@color/black"
     android:gravity="center">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/otp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:lottie_rawRes="@raw/otp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:layout_marginBottom="10dp"
         />
 
@@ -27,7 +30,10 @@
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:text="We will send an OTP to your mobile number"
         android:textColor="@color/white"
@@ -36,7 +42,10 @@
         android:fontFamily="@font/montserrat"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:text="Enter Your Country Code And Mobile Number"
         android:textColor="@color/white"
@@ -45,13 +54,15 @@
         android:fontFamily="@font/montserrat"/>
 
     <LinearLayout
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/countryCode"
-            android:layout_width="70dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/squareblue"
             android:hint="91"
@@ -62,11 +73,12 @@
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textColorHint="@color/gray"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:layout_weight="1"/>
 
         <EditText
             android:id="@+id/phoneNumber"
-            android:layout_width="230dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/squareblue"
             android:hint="1234567890"
@@ -78,18 +90,21 @@
             android:layout_marginLeft="20dp"
             android:textColor="@color/white"
             android:textColorHint="@color/gray"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:layout_weight="4"/>
 
     </LinearLayout>
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp">
 
         <Button
             android:id="@+id/buttonGetOTP"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundgbluebutton"
             android:fontFamily="@font/montserrat"
