--- a/app/src/main/res/layout/activity_login_otp.xml
+++ b/app/src/main/res/layout/activity_login_otp.xml
@@ -62,7 +62,7 @@
             android:maxLength="1"
             android:textSize="22sp"
             android:background="@drawable/squareblue"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:layout_margin="5dp"
             tools:ignore="LabelFor" />
 
@@ -77,7 +77,7 @@
             android:maxLength="1"
             android:textSize="22sp"
             android:background="@drawable/squareblue"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:layout_margin="5dp"
             tools:ignore="LabelFor" />
 
@@ -92,7 +92,7 @@
             android:maxLength="1"
             android:textSize="22sp"
             android:background="@drawable/squareblue"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:layout_margin="5dp"
             tools:ignore="LabelFor" />
 
@@ -107,7 +107,7 @@
             android:maxLength="1"
             android:textSize="22sp"
             android:background="@drawable/squareblue"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:layout_margin="5dp"
             tools:ignore="LabelFor" />
 
@@ -122,7 +122,7 @@
             android:maxLength="1"
             android:textSize="22sp"
             android:background="@drawable/squareblue"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:layout_margin="5dp"
             tools:ignore="LabelFor" />
 
@@ -138,7 +138,7 @@
             android:textSize="22sp"
             android:background="@drawable/squareblue"
             android:layout_margin="5dp"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             tools:ignore="LabelFor" />
 
     </LinearLayout>
@@ -178,12 +178,14 @@
 
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn_verify"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/roundgbluebutton"
             android:textAlignment="center"
