--- a/app/src/main/res/layout/activity_otp_verify.xml
+++ b/app/src/main/res/layout/activity_otp_verify.xml
@@ -145,6 +145,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
@@ -177,12 +179,14 @@
 
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn_verify"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/roundgbluebutton"
             android:textAlignment="center"
