user profile activity made, can update username, state and pincode

--- a/app/src/main/res/layout/activity_user__detail.xml
+++ b/app/src/main/res/layout/activity_user__detail.xml
@@ -15,7 +15,7 @@
             android:layout_marginLeft="30dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="@string/great"
+            android:text="@string/great_now"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -41,9 +41,7 @@
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/gray"
             android:textColor="@color/white"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
+            android:padding="10dp"
             android:drawableLeft="@drawable/user"
             android:drawablePadding="10dp"
             />
@@ -69,9 +67,7 @@
                 android:ems="10"
                 android:inputType="text"
                 android:layout_marginBottom="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="10dp"
+                android:padding="10dp"
                 android:fontFamily="@font/montserrat"
                 android:textColorHint="@color/gray"
                 android:textColor="@color/white"
@@ -91,9 +87,7 @@
                 android:ems="10"
                 android:layout_marginBottom="20dp"
                 android:inputType="number"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="10dp"
+                android:padding="10dp"
                 android:fontFamily="@font/montserrat"
                 android:textColorHint="@color/gray"
                 android:textColor="@color/white"
@@ -116,7 +110,6 @@
                 android:text="Select Gender"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp" />
         </LinearLayout>
 
@@ -142,9 +135,7 @@
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 android:textStyle="bold"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="10dp"
+                android:padding="10dp"
                 android:drawableLeft="@drawable/man"
                 android:drawablePadding="10dp"
                 android:layout_weight="1"/>
@@ -159,9 +150,7 @@
                 android:textStyle="bold"
                 android:textSize="13sp"
                 android:background="@drawable/squareblue"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingLeft="10dp"
+                android:padding="10dp"
                 android:drawableLeft="@drawable/woman"
                 android:drawablePadding="10dp"
                 android:layout_weight="1"
@@ -176,19 +165,16 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_height="40dp"
-            android:hint="Select Date Of Birth"
+            android:hint="@string/select_dob"
             android:background="@drawable/squareblue"
-            android:layout_centerHorizontal="true"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="40dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
+            android:padding="10dp"
             android:fontFamily="@font/montserrat"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
-            android:drawableLeft="@drawable/bottomarrow"
+            android:drawableStart="@drawable/bottomarrow"
             android:drawablePadding="10dp"
             android:textAlignment="center"
             />
