--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/good_morning"
+                android:text="@string/welcome"
                 android:textColor="@color/white"
                 android:fontFamily="@font/montserrat"
                 android:textSize="20sp"
@@ -52,9 +52,8 @@
                 android:textColor="@color/white"
                 android:fontFamily="@font/montserrat"
                 android:textSize="20sp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 />
-
 
         </LinearLayout>
 
