--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,7 +116,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_margin="20dp">
 
         <LinearLayout
             android:id="@+id/google"
@@ -168,7 +168,6 @@
 
 
         <LinearLayout
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/roundblue"
@@ -203,6 +202,7 @@
     </LinearLayout>
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -231,5 +231,7 @@
 
 
     </LinearLayout>
+
+
 
 </LinearLayout>
