--- a/app/src/main/res/layout/activity_otp_verify.xml
+++ b/app/src/main/res/layout/activity_otp_verify.xml
@@ -1,210 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/black"
+    android:background="@drawable/pin"
     tools:context=".SignUp.Otp_verify">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="OTP VERIFICATION"
-        android:textColor="@color/blue"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="50dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:text="Enter the code send to"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp" />
-
-    <TextView
-        android:id="@+id/number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
-        android:hint="1234567890"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="5dp"
-        android:textColorHint="@color/white"
-        />
-
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="15dp"
+        android:layout_height="598dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="133dp"
         android:gravity="center"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/inputCode1"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="22sp"
-            android:background="@drawable/squareblue"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
-            tools:ignore="LabelFor" />
-
-        <EditText
-            android:id="@+id/inputCode2"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="22sp"
-            android:background="@drawable/squareblue"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
-            tools:ignore="LabelFor" />
-
-        <EditText
-            android:id="@+id/inputCode3"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="22sp"
-            android:background="@drawable/squareblue"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
-            tools:ignore="LabelFor" />
-
-        <EditText
-            android:id="@+id/inputCode4"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="22sp"
-            android:background="@drawable/squareblue"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
-            tools:ignore="LabelFor" />
-
-        <EditText
-            android:id="@+id/inputCode5"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="22sp"
-            android:background="@drawable/squareblue"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
-            tools:ignore="LabelFor" />
-
-        <EditText
-            android:id="@+id/inputCode6"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="22sp"
-            android:background="@drawable/squareblue"
-            android:layout_margin="5dp"
-            android:textColor="@color/white"
-            tools:ignore="LabelFor" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="40dp">
+        android:orientation="vertical"
+        tools:context=".SignUp.Otp_verify">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/did_not_receive_code"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:layout_margin="3dp"
+            android:layout_marginBottom="50dp"
             android:fontFamily="@font/montserrat"
-            />
-
-        <TextView
-            android:id="@+id/ResendOTP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/resend_otp"
-            android:textSize="16sp"
+            android:text="OTP VERIFICATION"
             android:textColor="@color/blue"
-            android:textStyle="bold"
-            android:layout_margin="3dp"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/montserrat"
-            />
+            android:text="Enter the code send to"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/montserrat"
+            android:hint="1234567890"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/inputCode1"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/squareblue"
+                android:gravity="center"
+                android:imeOptions="actionNext"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:ignore="LabelFor" />
+
+            <EditText
+                android:id="@+id/inputCode2"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/squareblue"
+                android:gravity="center"
+                android:imeOptions="actionNext"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:ignore="LabelFor" />
+
+            <EditText
+                android:id="@+id/inputCode3"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/squareblue"
+                android:gravity="center"
+                android:imeOptions="actionNext"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:ignore="LabelFor" />
+
+            <EditText
+                android:id="@+id/inputCode4"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/squareblue"
+                android:gravity="center"
+                android:imeOptions="actionNext"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:ignore="LabelFor" />
+
+            <EditText
+                android:id="@+id/inputCode5"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/squareblue"
+                android:gravity="center"
+                android:imeOptions="actionNext"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:ignore="LabelFor" />
+
+            <EditText
+                android:id="@+id/inputCode6"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/squareblue"
+                android:gravity="center"
+                android:imeOptions="actionNext"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:maxLength="1"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                tools:ignore="LabelFor" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="40dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/did_not_receive_code"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/ResendOTP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/resend_otp"
+                android:textColor="@color/blue"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+
+            <Button
+                android:id="@+id/btn_verify"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/roundgbluebutton"
+                android:text="@string/verify"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+        </FrameLayout>
+
 
     </LinearLayout>
 
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/btn_verify"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/roundgbluebutton"
-            android:textAlignment="center"
-            android:text="@string/verify"
-            android:textSize="18sp"
-            android:textColor="@color/white"
-            />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:visibility="gone"/>
-
-    </FrameLayout>
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
