changes in font

--- a/app/src/main/res/layout/activity_link_to_others.xml
+++ b/app/src/main/res/layout/activity_link_to_others.xml
@@ -12,10 +12,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/courgette"
+        android:fontFamily="@font/montserrat"
         android:text="Enter email to connect "
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:drawableStart="@drawable/ic_baseline_email_24"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="10dp"
-        android:fontFamily="@font/courgette"
+        android:fontFamily="@font/montserrat"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
@@ -53,10 +53,10 @@
         android:layout_height="50dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/white"
-        android:fontFamily="@font/courgette"
+        android:fontFamily="@font/montserrat"
         android:text="Proceed"
         android:textColor="#ffffff"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
